@@ -1,5 +1,5 @@
 /*
- * Copyright 2015 Palantir Technologies
+ * Copyright 2015 Palantir Technologies, Inc. All rights reserved.
  *
  * Licensed under the BSD-3 License (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,18 +15,19 @@
  */
 package com.palantir.atlasdb.keyvalue.impl;
 
-import static java.util.Collections.emptyMap;
-
-import static org.hamcrest.CoreMatchers.hasItems;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.core.Is.is;
+import static org.hamcrest.Matchers.hasItems;
+import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -34,8 +35,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
+import java.util.SortedMap;
 
-import org.apache.commons.lang.ArrayUtils;
+import org.apache.commons.lang3.ArrayUtils;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.Assert;
@@ -61,6 +63,7 @@ import com.palantir.atlasdb.keyvalue.api.BatchColumnRangeSelection;
 import com.palantir.atlasdb.keyvalue.api.Cell;
 import com.palantir.atlasdb.keyvalue.api.CheckAndSetException;
 import com.palantir.atlasdb.keyvalue.api.CheckAndSetRequest;
+import com.palantir.atlasdb.keyvalue.api.ClusterAvailabilityStatus;
 import com.palantir.atlasdb.keyvalue.api.ColumnRangeSelection;
 import com.palantir.atlasdb.keyvalue.api.ColumnSelection;
 import com.palantir.atlasdb.keyvalue.api.KeyAlreadyExistsException;
@@ -71,28 +74,36 @@ import com.palantir.atlasdb.keyvalue.api.RowColumnRangeIterator;
 import com.palantir.atlasdb.keyvalue.api.RowResult;
 import com.palantir.atlasdb.keyvalue.api.TableReference;
 import com.palantir.atlasdb.keyvalue.api.Value;
+import com.palantir.atlasdb.table.description.ColumnMetadataDescription;
+import com.palantir.atlasdb.table.description.ColumnValueDescription;
+import com.palantir.atlasdb.table.description.NameMetadataDescription;
+import com.palantir.atlasdb.table.description.NamedColumnDescription;
+import com.palantir.atlasdb.table.description.TableMetadata;
+import com.palantir.atlasdb.table.description.ValueType;
+import com.palantir.atlasdb.transaction.api.ConflictHandler;
 import com.palantir.common.base.ClosableIterator;
 
 public abstract class AbstractKeyValueServiceTest {
     protected static final TableReference TEST_TABLE = TableReference.createFromFullyQualifiedName("ns.pt_kvs_test");
-    protected static final TableReference TEST_NONEXISTING_TABLE = TableReference.createFromFullyQualifiedName("ns2.some_nonexisting_table");
+    protected static final TableReference TEST_NONEXISTING_TABLE = TableReference.createFromFullyQualifiedName(
+            "ns2.some_nonexisting_table");
 
-    protected static final byte[] row0 = "row0".getBytes();
-    protected static final byte[] row1 = "row1".getBytes();
-    protected static final byte[] row2 = "row2".getBytes();
-    protected static final byte[] column0 = "column0".getBytes();
-    protected static final byte[] column1 = "column1".getBytes();
-    protected static final byte[] column2 = "column2".getBytes();
-    protected static final byte[] value00 = "value00".getBytes();
-    protected static final byte[] value01 = "value01".getBytes();
-    protected static final byte[] value10 = "value10".getBytes();
-    protected static final byte[] value12 = "value12".getBytes();
-    protected static final byte[] value21 = "value21".getBytes();
-    protected static final byte[] value22 = "value22".getBytes();
+    protected static final byte[] row0 = PtBytes.toBytes("row0");
+    protected static final byte[] row1 = PtBytes.toBytes("row1");
+    protected static final byte[] row2 = PtBytes.toBytes("row2");
+    protected static final byte[] column0 = PtBytes.toBytes("column0");
+    protected static final byte[] column1 = PtBytes.toBytes("column1");
+    protected static final byte[] column2 = PtBytes.toBytes("column2");
+    protected static final byte[] value00 = PtBytes.toBytes("value00");
+    protected static final byte[] value01 = PtBytes.toBytes("value01");
+    protected static final byte[] value10 = PtBytes.toBytes("value10");
+    protected static final byte[] value12 = PtBytes.toBytes("value12");
+    protected static final byte[] value21 = PtBytes.toBytes("value21");
+    protected static final byte[] value22 = PtBytes.toBytes("value22");
 
-    protected static final byte[] value0_t0 = "value0_t0".getBytes();
-    protected static final byte[] value0_t1 = "value1_t1".getBytes();
-    protected static final byte[] value0_t5 = "value5_t5".getBytes();
+    protected static final byte[] value0_t0 = PtBytes.toBytes("value0_t0");
+    protected static final byte[] value0_t1 = PtBytes.toBytes("value1_t1");
+    protected static final byte[] value0_t5 = PtBytes.toBytes("value5_t5");
 
     protected static final Cell TEST_CELL = Cell.create(row0, column0);
     protected static final long TEST_TIMESTAMP = 1000000L;
@@ -176,7 +187,7 @@ public abstract class AbstractKeyValueServiceTest {
                                                           ColumnSelection.all(),
                                                           TEST_TIMESTAMP + 1);
         assertEquals(4, values.size());
-        assertEquals(null, values.get(Cell.create(row1, column1)));
+        assertNull(values.get(Cell.create(row1, column1)));
         assertArrayEquals(value10, values.get(Cell.create(row1, column0)).getContents());
         assertArrayEquals(value12, values.get(Cell.create(row1, column2)).getContents());
         assertArrayEquals(value21, values.get(Cell.create(row2, column1)).getContents());
@@ -210,7 +221,9 @@ public abstract class AbstractKeyValueServiceTest {
         assertArrayEquals(batchValues.get(Cell.create(row1, column0)).getContents(), value10);
         values = keyValueService.getRowsColumnRange(TEST_TABLE,
                 ImmutableList.of(row1),
-                BatchColumnRangeSelection.create(RangeRequests.nextLexicographicName(column0), PtBytes.EMPTY_BYTE_ARRAY, 1),
+                BatchColumnRangeSelection.create(RangeRequests.nextLexicographicName(column0),
+                        PtBytes.EMPTY_BYTE_ARRAY,
+                        1),
                 TEST_TIMESTAMP + 1);
         assertEquals(1, values.size());
         batchValues = getValuesForRow(values, row1, 1);
@@ -224,7 +237,9 @@ public abstract class AbstractKeyValueServiceTest {
         assertEquals(0, getValuesForRow(values, row1, 1).size());
         values = keyValueService.getRowsColumnRange(TEST_TABLE,
                 ImmutableList.of(row1),
-                BatchColumnRangeSelection.create(RangeRequests.nextLexicographicName(column2), PtBytes.EMPTY_BYTE_ARRAY, 1),
+                BatchColumnRangeSelection.create(RangeRequests.nextLexicographicName(column2),
+                        PtBytes.EMPTY_BYTE_ARRAY,
+                        1),
                 TEST_TIMESTAMP + 1);
         assertEquals(1, values.size());
         assertEquals(0, getValuesForRow(values, row1, 1).size());
@@ -275,7 +290,9 @@ public abstract class AbstractKeyValueServiceTest {
         // the TEST_TIMESTAMP result so we have to get another page for column1.
         Map<byte[], RowColumnRangeIterator> values = keyValueService.getRowsColumnRange(TEST_TABLE,
                 ImmutableList.of(row1),
-                BatchColumnRangeSelection.create(PtBytes.EMPTY_BYTE_ARRAY, RangeRequests.nextLexicographicName(column1), 2),
+                BatchColumnRangeSelection.create(PtBytes.EMPTY_BYTE_ARRAY,
+                        RangeRequests.nextLexicographicName(column1),
+                        2),
                 TEST_TIMESTAMP + 1);
         assertEquals(1, values.size());
         Map<Cell, Value> batchValues = getValuesForRow(values, row1, 2);
@@ -490,7 +507,7 @@ public abstract class AbstractKeyValueServiceTest {
                                                           columns1and2,
                                                           TEST_TIMESTAMP + 1);
         assertEquals(3, values.size());
-        assertEquals(null, values.get(Cell.create(row1, column0)));
+        assertNull(values.get(Cell.create(row1, column0)));
         assertArrayEquals(value12, values.get(Cell.create(row1, column2)).getContents());
         assertArrayEquals(value21, values.get(Cell.create(row2, column1)).getContents());
         assertArrayEquals(value22, values.get(Cell.create(row2, column2)).getContents());
@@ -501,8 +518,8 @@ public abstract class AbstractKeyValueServiceTest {
         putTestDataForMultipleTimestamps();
         Map<Cell, Long> timestamps = keyValueService.getLatestTimestamps(TEST_TABLE,
                 ImmutableMap.of(TEST_CELL, TEST_TIMESTAMP + 2));
-        assertTrue("Incorrect number of values returned.", timestamps.size() == 1);
-        assertEquals("Incorrect value returned.", new Long(TEST_TIMESTAMP + 1),
+        assertEquals("Incorrect number of values returned.", 1, timestamps.size());
+        assertEquals("Incorrect value returned.", Long.valueOf(TEST_TIMESTAMP + 1),
                 timestamps.get(TEST_CELL));
     }
 
@@ -511,7 +528,7 @@ public abstract class AbstractKeyValueServiceTest {
         putTestDataForMultipleTimestamps();
         Map<Cell, Value> values = keyValueService.get(TEST_TABLE,
                 ImmutableMap.of(TEST_CELL, TEST_TIMESTAMP + 2));
-        assertTrue("Incorrect number of values returned.", values.size() == 1);
+        assertEquals("Incorrect number of values returned.", 1, values.size());
         assertEquals("Incorrect value returned.", Value.create(value0_t1, TEST_TIMESTAMP + 1),
                 values.get(TEST_CELL));
     }
@@ -532,14 +549,18 @@ public abstract class AbstractKeyValueServiceTest {
 
     @Test
     public void testTableMetadata() {
-        assertEquals(AtlasDbConstants.GENERIC_TABLE_METADATA.length, keyValueService.getMetadataForTable(TEST_TABLE).length);
+        assertEquals(AtlasDbConstants.GENERIC_TABLE_METADATA.length,
+                keyValueService.getMetadataForTable(TEST_TABLE).length);
         keyValueService.putMetadataForTable(TEST_TABLE, ArrayUtils.EMPTY_BYTE_ARRAY);
         assertEquals(0, keyValueService.getMetadataForTable(TEST_TABLE).length);
         keyValueService.putMetadataForTable(TEST_TABLE, AtlasDbConstants.GENERIC_TABLE_METADATA);
-        assertTrue(Arrays.equals(AtlasDbConstants.GENERIC_TABLE_METADATA, keyValueService.getMetadataForTable(TEST_TABLE)));
+        assertTrue(Arrays.equals(AtlasDbConstants.GENERIC_TABLE_METADATA,
+                keyValueService.getMetadataForTable(TEST_TABLE)));
     }
 
-    private static <V, T extends Iterator<RowResult<V>>> void assertRangeSizeAndOrdering(T it, int expectedSize, RangeRequest rangeRequest) {
+    private static <V, T extends Iterator<RowResult<V>>> void assertRangeSizeAndOrdering(T it,
+            int expectedSize,
+            RangeRequest rangeRequest) {
         if (!it.hasNext()) {
             assertEquals(expectedSize, 0);
             return;
@@ -598,34 +619,51 @@ public abstract class AbstractKeyValueServiceTest {
 
         if (reverseSupported) {
             final RangeRequest allReverse = RangeRequest.reverseBuilder().build();
-            assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, allReverse, TEST_TIMESTAMP + 1), 3, allReverse);
+            assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, allReverse, TEST_TIMESTAMP + 1),
+                    3,
+                    allReverse);
         }
 
         // Upbounded
         final RangeRequest upbounded = RangeRequest.builder().endRowExclusive(row2).build();
-        assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, upbounded, TEST_TIMESTAMP + 1), 2, upbounded);
+        assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, upbounded, TEST_TIMESTAMP + 1),
+                2,
+                upbounded);
 
         if (reverseSupported) {
             final RangeRequest upboundedReverse = RangeRequest.reverseBuilder().endRowExclusive(row0).build();
-            assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, upboundedReverse, TEST_TIMESTAMP + 1), 2, upboundedReverse);
+            assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, upboundedReverse, TEST_TIMESTAMP + 1),
+                    2,
+                    upboundedReverse);
         }
 
         // Downbounded
         final RangeRequest downbounded = RangeRequest.builder().startRowInclusive(row1).build();
-        assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, downbounded, TEST_TIMESTAMP + 1), 2, downbounded);
+        assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, downbounded, TEST_TIMESTAMP + 1),
+                2,
+                downbounded);
 
         if (reverseSupported) {
             final RangeRequest downboundedReverse = RangeRequest.reverseBuilder().startRowInclusive(row1).build();
-            assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, downboundedReverse, TEST_TIMESTAMP + 1), 2, downboundedReverse);
+            assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, downboundedReverse, TEST_TIMESTAMP + 1),
+                    2,
+                    downboundedReverse);
         }
 
         // Both-bounded
         final RangeRequest bothbounded = RangeRequest.builder().startRowInclusive(row1).endRowExclusive(row2).build();
-        assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, bothbounded, TEST_TIMESTAMP + 1), 1, bothbounded);
+        assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, bothbounded, TEST_TIMESTAMP + 1),
+                1,
+                bothbounded);
 
         if (reverseSupported) {
-            final RangeRequest bothboundedReverse = RangeRequest.reverseBuilder().startRowInclusive(row2).endRowExclusive(row1).build();
-            assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, bothboundedReverse, TEST_TIMESTAMP + 1), 1, bothboundedReverse);
+            final RangeRequest bothboundedReverse = RangeRequest.reverseBuilder()
+                    .startRowInclusive(row2)
+                    .endRowExclusive(row1)
+                    .build();
+            assertRangeSizeAndOrdering(keyValueService.getRange(TEST_TABLE, bothboundedReverse, TEST_TIMESTAMP + 1),
+                    1,
+                    bothboundedReverse);
         }
 
         // Precise test for lower-bounded
@@ -634,7 +672,7 @@ public abstract class AbstractKeyValueServiceTest {
                 TEST_TABLE,
                 rangeRequest,
                 TEST_TIMESTAMP + 1);
-        assertTrue(keyValueService.getRange(TEST_TABLE, rangeRequest, TEST_TIMESTAMP).hasNext() == false);
+        assertFalse(keyValueService.getRange(TEST_TABLE, rangeRequest, TEST_TIMESTAMP).hasNext());
         assertTrue(rangeResult.hasNext());
         assertEquals(
                 RowResult.create(
@@ -656,6 +694,208 @@ public abstract class AbstractKeyValueServiceTest {
                                 Value.create(value22, TEST_TIMESTAMP)).build()),
                 rangeResult.next());
         rangeResult.close();
+    }
+
+    @Test
+    public void testGetRangePaging() {
+        for (int numColumnsInMetadata = 1; numColumnsInMetadata <= 3; ++numColumnsInMetadata) {
+            for (int batchSizeHint = 1; batchSizeHint <= 5; ++batchSizeHint) {
+                doTestGetRangePaging(numColumnsInMetadata, batchSizeHint, false);
+                if (reverseRangesSupported()) {
+                    doTestGetRangePaging(numColumnsInMetadata, batchSizeHint, true);
+                }
+            }
+        }
+    }
+
+    private void doTestGetRangePaging(int numColumnsInMetadata, int batchSizeHint, boolean reverse) {
+        TableReference tableRef = createTableWithNamedColumns(numColumnsInMetadata);
+
+        Map<Cell, byte[]> values = new HashMap<Cell, byte[]>();
+        values.put(Cell.create(PtBytes.toBytes("00"), PtBytes.toBytes("c1")),
+                PtBytes.toBytes("a"));
+        values.put(Cell.create(PtBytes.toBytes("00"), PtBytes.toBytes("c2")),
+                PtBytes.toBytes("b"));
+
+        values.put(Cell.create(PtBytes.toBytes("01"), RangeRequests.getFirstRowName()),
+                PtBytes.toBytes("c"));
+
+        values.put(Cell.create(PtBytes.toBytes("02"), PtBytes.toBytes("c1")),
+                PtBytes.toBytes("d"));
+        values.put(Cell.create(PtBytes.toBytes("02"), PtBytes.toBytes("c2")),
+                PtBytes.toBytes("e"));
+
+        values.put(Cell.create(PtBytes.toBytes("03"), PtBytes.toBytes("c1")),
+                PtBytes.toBytes("f"));
+
+        values.put(Cell.create(PtBytes.toBytes("04"), PtBytes.toBytes("c1")),
+                PtBytes.toBytes("g"));
+        values.put(Cell.create(PtBytes.toBytes("04"), RangeRequests.getLastRowName()),
+                PtBytes.toBytes("h"));
+
+        values.put(Cell.create(PtBytes.toBytes("05"), PtBytes.toBytes("c1")),
+                PtBytes.toBytes("i"));
+        values.put(Cell.create(RangeRequests.getLastRowName(), PtBytes.toBytes("c1")),
+                PtBytes.toBytes("j"));
+        keyValueService.put(tableRef, values, TEST_TIMESTAMP);
+
+        RangeRequest request = RangeRequest.builder(reverse).batchHint(batchSizeHint).build();
+        try (ClosableIterator<RowResult<Value>> iter = keyValueService.getRange(tableRef, request, Long.MAX_VALUE)) {
+            List<RowResult<Value>> results = ImmutableList.copyOf(iter);
+            List<RowResult<Value>> expected = ImmutableList.of(
+                    RowResult.create(PtBytes.toBytes("00"),
+                        ImmutableSortedMap.<byte[], Value>orderedBy(UnsignedBytes.lexicographicalComparator())
+                            .put(PtBytes.toBytes("c1"),
+                                    Value.create(PtBytes.toBytes("a"), TEST_TIMESTAMP))
+                            .put(PtBytes.toBytes("c2"),
+                                    Value.create(PtBytes.toBytes("b"), TEST_TIMESTAMP))
+                            .build()),
+                    RowResult.create(PtBytes.toBytes("01"),
+                        ImmutableSortedMap.<byte[], Value>orderedBy(UnsignedBytes.lexicographicalComparator())
+                            .put(RangeRequests.getFirstRowName(),
+                                    Value.create(PtBytes.toBytes("c"), TEST_TIMESTAMP))
+                            .build()),
+                    RowResult.create(PtBytes.toBytes("02"),
+                        ImmutableSortedMap.<byte[], Value>orderedBy(UnsignedBytes.lexicographicalComparator())
+                            .put(PtBytes.toBytes("c1"),
+                                    Value.create(PtBytes.toBytes("d"), TEST_TIMESTAMP))
+                            .put(PtBytes.toBytes("c2"),
+                                    Value.create(PtBytes.toBytes("e"), TEST_TIMESTAMP))
+                            .build()),
+                    RowResult.create(PtBytes.toBytes("03"),
+                        ImmutableSortedMap.<byte[], Value>orderedBy(UnsignedBytes.lexicographicalComparator())
+                            .put(PtBytes.toBytes("c1"),
+                                    Value.create(PtBytes.toBytes("f"), TEST_TIMESTAMP))
+                            .build()),
+                    RowResult.create(PtBytes.toBytes("04"),
+                        ImmutableSortedMap.<byte[], Value>orderedBy(UnsignedBytes.lexicographicalComparator())
+                            .put(PtBytes.toBytes("c1"),
+                                    Value.create(PtBytes.toBytes("g"), TEST_TIMESTAMP))
+                            .put(RangeRequests.getLastRowName(),
+                                    Value.create(PtBytes.toBytes("h"), TEST_TIMESTAMP))
+                            .build()),
+                    RowResult.create(PtBytes.toBytes("05"),
+                        ImmutableSortedMap.<byte[], Value>orderedBy(UnsignedBytes.lexicographicalComparator())
+                            .put(PtBytes.toBytes("c1"),
+                                    Value.create(PtBytes.toBytes("i"), TEST_TIMESTAMP))
+                            .build()),
+                    RowResult.create(RangeRequests.getLastRowName(),
+                        ImmutableSortedMap.<byte[], Value>orderedBy(UnsignedBytes.lexicographicalComparator())
+                            .put(PtBytes.toBytes("c1"),
+                                    Value.create(PtBytes.toBytes("j"), TEST_TIMESTAMP))
+                            .build())
+            );
+            assertEquals(reverse ? Lists.reverse(expected) : expected, results);
+        }
+    }
+
+    @Test
+    public void testGetRangePagingLastRowEdgeCase() {
+        for (int batchSizeHint = 1; batchSizeHint <= 2; ++batchSizeHint) {
+            doTestGetRangePagingLastRowEdgeCase(1, batchSizeHint, false);
+            if (reverseRangesSupported()) {
+                doTestGetRangePagingLastRowEdgeCase(1, batchSizeHint, true);
+            }
+        }
+    }
+
+    private void doTestGetRangePagingLastRowEdgeCase(int numColumnsInMetadata, int batchSizeHint, boolean reverse) {
+        TableReference tableRef = createTableWithNamedColumns(numColumnsInMetadata);
+        byte[] last = reverse ? RangeRequests.getFirstRowName() : RangeRequests.getLastRowName();
+        Map<Cell, byte[]> values = ImmutableMap.of(
+                Cell.create(last, PtBytes.toBytes("c1")), PtBytes.toBytes("a"),
+                Cell.create(last, last), PtBytes.toBytes("b"));
+        keyValueService.put(tableRef, values, TEST_TIMESTAMP);
+
+        RangeRequest request = RangeRequest.builder(reverse).batchHint(batchSizeHint).build();
+        try (ClosableIterator<RowResult<Value>> iter = keyValueService.getRange(tableRef, request, Long.MAX_VALUE)) {
+            List<RowResult<Value>> results = ImmutableList.copyOf(iter);
+            List<RowResult<Value>> expected = ImmutableList.of(
+                    RowResult.create(last,
+                        ImmutableSortedMap.<byte[], Value>orderedBy(UnsignedBytes.lexicographicalComparator())
+                                .put(PtBytes.toBytes("c1"),
+                                        Value.create(PtBytes.toBytes("a"), TEST_TIMESTAMP))
+                                .put(last, Value.create(PtBytes.toBytes("b"), TEST_TIMESTAMP))
+                                .build()));
+            assertEquals(expected, results);
+        }
+    }
+
+    @Test
+    public void testGetRangePagingWithColumnSelection() {
+        for (int numRows = 1; numRows <= 6; ++numRows) {
+            populateTableWithTriangularData(numRows);
+            for (int numColsInSelection = 1; numColsInSelection <= 7; ++numColsInSelection) {
+                for (int batchSizeHint = 1; batchSizeHint <= 7; ++batchSizeHint) {
+                    doTestGetRangePagingWithColumnSelection(batchSizeHint, numRows, numColsInSelection, false);
+                    if (reverseRangesSupported()) {
+                        doTestGetRangePagingWithColumnSelection(batchSizeHint, numRows, numColsInSelection, true);
+                    }
+                }
+            }
+        }
+    }
+
+    // row 1: 1
+    // row 2: 1 2
+    // row 3: 1 2 3
+    // row 4: 1 2 3 4
+    // ...
+    private void populateTableWithTriangularData(int numRows) {
+        Map<Cell, byte[]> values = new HashMap<>();
+        for (long row = 1; row <= numRows; ++row) {
+            for (long col = 1; col <= row; ++col) {
+                byte[] rowName = PtBytes.toBytes(Long.MIN_VALUE ^ row);
+                byte[] colName = PtBytes.toBytes(Long.MIN_VALUE ^ col);
+                values.put(Cell.create(rowName, colName), PtBytes.toBytes(row + "," + col));
+            }
+        }
+        keyValueService.truncateTable(TEST_TABLE);
+        keyValueService.put(TEST_TABLE, values, TEST_TIMESTAMP);
+    }
+
+    private void doTestGetRangePagingWithColumnSelection(int batchSizeHint,
+                                                         int numRows,
+                                                         int numColsInSelection,
+                                                         boolean reverse) {
+        Collection<byte[]> columnSelection = new ArrayList<>(numColsInSelection);
+        for (long col = 1; col <= numColsInSelection; ++col) {
+            byte[] colName = PtBytes.toBytes(Long.MIN_VALUE ^ col);
+            columnSelection.add(colName);
+        }
+        RangeRequest request = RangeRequest.builder(reverse)
+                .retainColumns(columnSelection)
+                .batchHint(batchSizeHint)
+                .build();
+        try (ClosableIterator<RowResult<Value>> iter = keyValueService.getRange(TEST_TABLE, request, Long.MAX_VALUE)) {
+            List<RowResult<Value>> results = ImmutableList.copyOf(iter);
+            assertEquals(getExpectedResultForRangePagingWithColumnSelectionTest(numRows, numColsInSelection, reverse),
+                    results);
+        }
+    }
+
+    private List<RowResult<Value>> getExpectedResultForRangePagingWithColumnSelectionTest(int numRows,
+                                                                                          int numColsInSelection,
+                                                                                          boolean reverse) {
+        List<RowResult<Value>> expected = new ArrayList<>();
+        for (long row = 1; row <= numRows; ++row) {
+            ImmutableSortedMap.Builder<byte[], Value> builder = ImmutableSortedMap.orderedBy(
+                    UnsignedBytes.lexicographicalComparator());
+            for (long col = 1; col <= row && col <= numColsInSelection; ++col) {
+                byte[] colName = PtBytes.toBytes(Long.MIN_VALUE ^ col);
+                builder.put(colName, Value.create(PtBytes.toBytes(row + "," + col), TEST_TIMESTAMP));
+            }
+            SortedMap<byte[], Value> columns = builder.build();
+            if (!columns.isEmpty()) {
+                byte[] rowName = PtBytes.toBytes(Long.MIN_VALUE ^ row);
+                expected.add(RowResult.create(rowName, columns));
+            }
+        }
+        if (reverse) {
+            return Lists.reverse(expected);
+        } else {
+            return expected;
+        }
     }
 
     @Test
@@ -731,7 +971,7 @@ public abstract class AbstractKeyValueServiceTest {
         keyValueService.delete(TEST_TABLE, ImmutableMultimap.of(TEST_CELL, TEST_TIMESTAMP));
 
         result = keyValueService.getRange(TEST_TABLE, RangeRequest.all(), TEST_TIMESTAMP + 1);
-        assertTrue(!result.hasNext());
+        assertFalse(result.hasNext());
 
         result = keyValueService.getRange(TEST_TABLE, RangeRequest.all(), TEST_TIMESTAMP + 2);
         assertTrue(result.hasNext());
@@ -740,19 +980,22 @@ public abstract class AbstractKeyValueServiceTest {
     @Test
     public void testDeleteRangeReverse() {
         Assume.assumeTrue(reverseRangesSupported());
-        setupTestRowsZeroOneAndTwoAndDeleteFrom("row1b".getBytes(), row0, true); // should delete only row1
+        // should delete only row1
+        setupTestRowsZeroOneAndTwoAndDeleteFrom(PtBytes.toBytes("row1b"), row0, true);
         checkThatTableIsNowOnly(row0, row2);
     }
 
     @Test
     public void testDeleteRangeStartRowInclusivity() {
-        setupTestRowsZeroOneAndTwoAndDeleteFrom(row0, "row1b".getBytes()); // should delete row0 and row1
+        // should delete row0 and row1
+        setupTestRowsZeroOneAndTwoAndDeleteFrom(row0, PtBytes.toBytes("row1b"));
         checkThatTableIsNowOnly(row2);
     }
 
     @Test
     public void testDeleteRangeEndRowExclusivity() {
-        setupTestRowsZeroOneAndTwoAndDeleteFrom("row".getBytes(), row1); // should delete row0 only
+        // should delete row0 only
+        setupTestRowsZeroOneAndTwoAndDeleteFrom(PtBytes.toBytes("row"), row1);
         checkThatTableIsNowOnly(row1, row2);
     }
 
@@ -765,7 +1008,8 @@ public abstract class AbstractKeyValueServiceTest {
 
     @Test
     public void testDeleteRangeNone() {
-        setupTestRowsZeroOneAndTwoAndDeleteFrom("a".getBytes(), "a".getBytes());
+        setupTestRowsZeroOneAndTwoAndDeleteFrom(PtBytes.toBytes("a"),
+                PtBytes.toBytes("a"));
         checkThatTableIsNowOnly(row0, row1, row2);
     }
 
@@ -823,14 +1067,32 @@ public abstract class AbstractKeyValueServiceTest {
         }
         ClosableIterator<RowResult<Set<Long>>> rangeWithHistory = keyValueService.getRangeOfTimestamps(
                 TEST_TABLE, range, TEST_TIMESTAMP + 2);
-        RowResult<Set<Long>> row0 = rangeWithHistory.next();
-        assertTrue(!rangeWithHistory.hasNext());
+
+        RowResult<Set<Long>> row = rangeWithHistory.next();
+        assertFalse(rangeWithHistory.hasNext());
         rangeWithHistory.close();
-        assertEquals(1, Iterables.size(row0.getCells()));
-        Entry<Cell, Set<Long>> cell0 = row0.getCells().iterator().next();
+        assertEquals(1, Iterables.size(row.getCells()));
+        Entry<Cell, Set<Long>> cell0 = row.getCells().iterator().next();
         assertEquals(2, cell0.getValue().size());
         assertTrue(cell0.getValue().contains(TEST_TIMESTAMP));
         assertTrue(cell0.getValue().contains(TEST_TIMESTAMP + 1));
+    }
+
+    @Test
+    public void testGetRangeOfTimestampsReturnsAllRows() {
+        keyValueService.put(TEST_TABLE,
+                ImmutableMap.of(
+                    Cell.create(row0, column0), value0_t0,
+                    Cell.create(row1, column0), value0_t0,
+                    Cell.create(row2, column0), value0_t0),
+                TEST_TIMESTAMP);
+        RangeRequest range = RangeRequest.all().withBatchHint(1);
+        List<RowResult<Set<Long>>> results = ImmutableList.copyOf(
+                keyValueService.getRangeOfTimestamps(TEST_TABLE, range, TEST_TIMESTAMP + 1));
+        assertEquals(3, results.size());
+        assertArrayEquals(row0, results.get(0).getRowName());
+        assertArrayEquals(row1, results.get(1).getRowName());
+        assertArrayEquals(row2, results.get(2).getRowName());
     }
 
     @Test
@@ -967,24 +1229,28 @@ public abstract class AbstractKeyValueServiceTest {
     }
 
     @Test
-    public void testAddGCSentinelValues() {
+    public void testAddGcSentinelValues() {
         putTestDataForMultipleTimestamps();
 
-        Multimap<Cell, Long> timestampsBefore = keyValueService.getAllTimestamps(TEST_TABLE, ImmutableSet.of(TEST_CELL), AtlasDbConstants.MAX_TS);
+        Multimap<Cell, Long> timestampsBefore = getTestTimestamps();
         assertEquals(2, timestampsBefore.size());
-        assertTrue(!timestampsBefore.containsEntry(TEST_CELL, Value.INVALID_VALUE_TIMESTAMP));
+        assertFalse(timestampsBefore.containsEntry(TEST_CELL, Value.INVALID_VALUE_TIMESTAMP));
 
         keyValueService.addGarbageCollectionSentinelValues(TEST_TABLE, ImmutableSet.of(TEST_CELL));
 
-        Multimap<Cell, Long> timestampsAfter1 = keyValueService.getAllTimestamps(TEST_TABLE, ImmutableSet.of(TEST_CELL), AtlasDbConstants.MAX_TS);
+        Multimap<Cell, Long> timestampsAfter1 = getTestTimestamps();
         assertEquals(3, timestampsAfter1.size());
         assertTrue(timestampsAfter1.containsEntry(TEST_CELL, Value.INVALID_VALUE_TIMESTAMP));
 
         keyValueService.addGarbageCollectionSentinelValues(TEST_TABLE, ImmutableSet.of(TEST_CELL));
 
-        Multimap<Cell, Long> timestampsAfter2 = keyValueService.getAllTimestamps(TEST_TABLE, ImmutableSet.of(TEST_CELL), AtlasDbConstants.MAX_TS);
+        Multimap<Cell, Long> timestampsAfter2 = getTestTimestamps();
         assertEquals(3, timestampsAfter2.size());
         assertTrue(timestampsAfter2.containsEntry(TEST_CELL, Value.INVALID_VALUE_TIMESTAMP));
+    }
+
+    private Multimap<Cell, Long> getTestTimestamps() {
+        return keyValueService.getAllTimestamps(TEST_TABLE, ImmutableSet.of(TEST_CELL), AtlasDbConstants.MAX_TS);
     }
 
     @Test
@@ -997,14 +1263,10 @@ public abstract class AbstractKeyValueServiceTest {
         }
     }
 
-    @Test
+    @Test(expected = RuntimeException.class)
     public void testGetRangeOfTimestampsThrowsOnError() {
-        try {
-            keyValueService.getRangeOfTimestamps(TEST_NONEXISTING_TABLE, RangeRequest.all(), AtlasDbConstants.MAX_TS).hasNext();
-            Assert.fail("getRangeOfTimestamps must throw on failure");
-        } catch (RuntimeException e) {
-            // Expected
-        }
+        keyValueService.getRangeOfTimestamps(TEST_NONEXISTING_TABLE, RangeRequest.all(), AtlasDbConstants.MAX_TS)
+                .hasNext();
     }
 
     @Test
@@ -1062,7 +1324,9 @@ public abstract class AbstractKeyValueServiceTest {
     }
 
     private byte[] getRowsForCell(Cell cell) {
-        return keyValueService.getRows(TEST_TABLE, ImmutableSet.of(cell.getRowName()), ColumnSelection.all(), TEST_TIMESTAMP + 3)
+        return keyValueService.getRows(TEST_TABLE, ImmutableSet.of(cell.getRowName()),
+                ColumnSelection.all(),
+                TEST_TIMESTAMP + 3)
                 .get(cell).getContents();
     }
 
@@ -1072,7 +1336,7 @@ public abstract class AbstractKeyValueServiceTest {
 
     private byte[] getOnlyItemInTableRange() {
         try (ClosableIterator<RowResult<Value>> rangeIterator =
-                     keyValueService.getRange(TEST_TABLE, RangeRequest.all(), TEST_TIMESTAMP + 3) ){
+                     keyValueService.getRange(TEST_TABLE, RangeRequest.all(), TEST_TIMESTAMP + 3)) {
             byte[] contents = rangeIterator.next().getOnlyColumnValue().getContents();
 
             assertFalse("There should only be one row in the table", rangeIterator.hasNext());
@@ -1089,7 +1353,7 @@ public abstract class AbstractKeyValueServiceTest {
 
         Map<Cell, Long> valueToGet = ImmutableMap.of(cell, AtlasDbConstants.MAX_TS);
 
-        assertThat(keyValueService.get(DynamicColumnTable.reference(), valueToGet), is(emptyMap()));
+        assertThat(keyValueService.get(DynamicColumnTable.reference(), valueToGet), is(Collections.emptyMap()));
     }
 
     @Test
@@ -1115,7 +1379,7 @@ public abstract class AbstractKeyValueServiceTest {
                 ColumnSelection.all(),
                 AtlasDbConstants.MAX_TS);
 
-        assertThat(values, is(emptyMap()));
+        assertThat(values, is(Collections.emptyMap()));
     }
 
     @Test
@@ -1178,6 +1442,11 @@ public abstract class AbstractKeyValueServiceTest {
         keyValueService.compactInternally(TEST_TABLE);
     }
 
+    @Test
+    public void clusterAvailabilityStatusShouldBeAllAvailable() {
+        assertThat(keyValueService.getClusterAvailabilityStatus(), is(ClusterAvailabilityStatus.ALL_AVAILABLE));
+    }
+
     private byte[] dynamicColumn(long columnId) {
         return PtBytes.toBytes(columnId);
     }
@@ -1186,7 +1455,7 @@ public abstract class AbstractKeyValueServiceTest {
         keyValueService.put(TEST_TABLE,
                 ImmutableMap.of(Cell.create(row0, column0), value0_t0), TEST_TIMESTAMP);
         keyValueService.put(TEST_TABLE,
-            ImmutableMap.of(Cell.create(row1, column0), value0_t0), TEST_TIMESTAMP);
+                ImmutableMap.of(Cell.create(row1, column0), value0_t0), TEST_TIMESTAMP);
         keyValueService.put(TEST_TABLE,
                 ImmutableMap.of(Cell.create(row2, column0), value0_t0), TEST_TIMESTAMP);
     }
@@ -1213,6 +1482,23 @@ public abstract class AbstractKeyValueServiceTest {
         values.put(Cell.create(row2, column1), value21);
         values.put(Cell.create(row2, column2), value22);
         keyValueService.put(TEST_TABLE, values, TEST_TIMESTAMP);
+    }
+
+    private TableReference createTableWithNamedColumns(int numColumns) {
+        TableReference tableRef = TableReference.createFromFullyQualifiedName(
+                "ns.pt_kvs_test_named_cols_" + numColumns);
+        List<NamedColumnDescription> columns = new ArrayList<>();
+        for (int i = 1; i <= numColumns; ++i) {
+            columns.add(new NamedColumnDescription(
+                    "c" + i, "column" + i, ColumnValueDescription.forType(ValueType.BLOB)));
+        }
+        keyValueService.createTable(tableRef,
+                new TableMetadata(
+                        new NameMetadataDescription(),
+                        new ColumnMetadataDescription(columns),
+                        ConflictHandler.RETRY_ON_WRITE_WRITE).persistToBytes());
+        keyValueService.truncateTable(tableRef);
+        return tableRef;
     }
 
     protected abstract KeyValueService getKeyValueService();
